--- a/configs/mvebu-cortexa9.config
+++ b/configs/mvebu-cortexa9.config
@@ -4,6 +4,8 @@ CONFIG_TARGET_ROOTFS_INITRAMFS=y
 CONFIG_PACKAGE_kmod-ath9k=m
 CONFIG_PACKAGE_kmod-ath10k=m
 CONFIG_PACKAGE_kmod-ath10k-ct=m
+CONFIG_PACKAGE_e2fsprogs=m
+CONFIG_PACKAGE_mkf2fs=m
 CONFIG_PACKAGE_mwlwifi-firmware-88w8864=m
 CONFIG_PACKAGE_mwlwifi-firmware-88w8964=m
 CONFIG_PACKAGE_ath10k-firmware-qca988x=m
