--- a/configs/bcm27xx-bcm2710.config
+++ b/configs/bcm27xx-bcm2710.config
@@ -11,3 +11,4 @@ CONFIG_PACKAGE_kmod-ath9k=m
 CONFIG_PACKAGE_kmod-ath9k-common=m
 CONFIG_PACKAGE_kmod-ath9k-htc=m
 # CONFIG_STRIP_KERNEL_EXPORTS is not set
+CONFIG_PACKAGE_irqbalance=m
