--- a/configs/common.config
+++ b/configs/common.config
@@ -192,6 +192,7 @@ CONFIG_STRIP_KERNEL_EXPORTS=y
 CONFIG_TARGET_PREINIT_IP="192.168.42.1"
 CONFIG_TARGET_PREINIT_NETMASK="255.255.255.0"
 CONFIG_TARGET_PREINIT_BROADCAST="192.168.42.255"
+CONFIG_TESTING_KERNEL=y
 CONFIG_VERSIONOPT=y
 CONFIG_VERSION_FILENAMES=y
 CONFIG_VERSION_CODE_FILENAMES=y
