configs: [busybox] disable SUSv2-compatibility
This compatibility seems deprecated, see https://github.com/openwrt/openwrt/pull/2646.

--- a/configs/common.config
+++ b/configs/common.config
@@ -18,6 +18,7 @@ CONFIG_BUSYBOX_CUSTOM=y
 CONFIG_BUSYBOX_CONFIG_TELNET=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_TELNET_TTYPE=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_TRACEROUTE_USE_ICMP=y
+# CONFIG_BUSYBOX_CONFIG_INCLUDE_SUSv2 is not set
 CONFIG_LIBCURL_OPENSSL=y
 CONFIG_OPENVPN_openssl_ENABLE_LZO=y
 CONFIG_OPENVPN_openssl_ENABLE_IPROUTE2=y
