--- a/configs/x86-generic.config
+++ b/configs/x86-generic.config
@@ -3,3 +3,4 @@ CONFIG_TARGET_x86_generic=y
 CONFIG_KERNEL_RELAY=y
 CONFIG_PACKAGE_MAC80211_DEBUGFS=y
 CONFIG_PACKAGE_MAC80211_MESH=y
+CONFIG_PACKAGE_irqbalance=m
