--- a/configs/x86-generic.config
+++ b/configs/x86-generic.config
@@ -10,3 +10,6 @@ CONFIG_PACKAGE_kmod-ath5k=m
 CONFIG_PACKAGE_kmod-ath9k=m
 CONFIG_PACKAGE_kmod-ath9k-common=m
 CONFIG_PACKAGE_kmod-ath9k-htc=m
+CONFIG_PACKAGE_nano=m
+CONFIG_PACKAGE_mc=m
+CONFIG_PACKAGE_screen=m
