drop ar71xx target
As OpenWrt has dropped this target some time ago. See
http://lists.infradead.org/pipermail/openwrt-devel/2020-August/030973.html

--- a/.github/workflows/build-firmware.yml
+++ b/.github/workflows/build-firmware.yml
@@ -12,8 +12,8 @@ jobs:
     strategy:
       matrix:
         target: 
-          - ar71xx-generic
-          - ar71xx-tiny
+          - ath79-generic
+          - ath79-tiny
           - x86-generic
       fail-fast: false
 
