--- a/configs/ath79-tiny.config
+++ b/configs/ath79-tiny.config
@@ -22,3 +22,6 @@ CONFIG_PACKAGE_wpad-mini=m
 # CONFIG_PACKAGE_usbutils is not set
 # CONFIG_BUSYBOX_CONFIG_FEATURE_MOUNT_CIFS is not set
 # CONFIG_PACKAGE_MAC80211_DEBUGFS is not set
+CONFIG_PACKAGE_zram-swap=m
+CONFIG_PROCD_ZRAM_TMPFS=y
+CONFIG_KERNEL_SWAP=y
