--- a/configs/ath79-tiny.config
+++ b/configs/ath79-tiny.config
@@ -31,3 +31,6 @@ CONFIG_PACKAGE_wpad-mini=m
 # CONFIG_PACKAGE_comgt is not set
 # CONFIG_AUDIO_SUPPORT is not set
 # CONFIG_USB_SUPPORT is not set
+CONFIG_PACKAGE_zram-swap=m
+CONFIG_PROCD_ZRAM_TMPFS=y
+CONFIG_KERNEL_SWAP=y
