--- a/configs/ath79-tiny.config
+++ b/configs/ath79-tiny.config
@@ -33,3 +33,6 @@ CONFIG_PACKAGE_wpad-mini=m
 # CONFIG_AUDIO_SUPPORT is not set
 # CONFIG_USB_SUPPORT is not set
 # CONFIG_PACKAGE_luci-proto-ppp is not set
+CONFIG_PACKAGE_zram-swap=m
+CONFIG_PROCD_ZRAM_TMPFS=y
+CONFIG_KERNEL_SWAP=y
