--- a/configs/ath79-tiny.config
+++ b/configs/ath79-tiny.config
@@ -34,5 +34,8 @@ CONFIG_PACKAGE_wpad-mini=m
 # CONFIG_USB_SUPPORT is not set
 # CONFIG_PACKAGE_luci-proto-ppp is not set
 CONFIG_PACKAGE_zram-swap=m
+CONFIG_BUSYBOX_CONFIG_MKWAP=y
+CONFIG_BUSYBOX_CONFIG_SWAPOFF=y
+CONFIG_BUSYBOX_CONFIG_SWAPON=y
 CONFIG_PROCD_ZRAM_TMPFS=y
 CONFIG_KERNEL_SWAP=y
