--- a/configs/ath79-tiny.config
+++ b/configs/ath79-tiny.config
@@ -29,6 +29,7 @@ CONFIG_PACKAGE_wpad-mini=m
 # CONFIG_PACKAGE_kmod-usb-storage is not set
 # CONFIG_PACKAGE_kmod-usb-uhci is not set
 # CONFIG_PACKAGE_kmod-usb2 is not set
+# CONFIG_PACKAGE_luci-proto-ppp is not set
 # CONFIG_PACKAGE_huaweiaktbbo is not set
 # CONFIG_PACKAGE_usb-modeswitch is not set
 # CONFIG_PACKAGE_usb-modeswitch-data is not set
