--- a/configs/ath79-tiny.config
+++ b/configs/ath79-tiny.config
@@ -32,3 +32,4 @@ CONFIG_PACKAGE_wpad-mini=m
 # CONFIG_PACKAGE_comgt is not set
 # CONFIG_AUDIO_SUPPORT is not set
 # CONFIG_USB_SUPPORT is not set
+# CONFIG_PACKAGE_luci-proto-ppp is not set
