configs: ath79-tiny: optimize for small kernel
instead of optimizing for speed

--- a/configs/ath79-tiny.config
+++ b/configs/ath79-tiny.config
@@ -4,6 +4,8 @@ CONFIG_TARGET_SQUASHFS_BLOCK_SIZE=512
 # CONFIG_ALL_KMODS is not set
 # CONFIG_AUDIO_SUPPORT is not set
 # CONFIG_USB_SUPPORT is not set
+# CONFIG_KERNEL_CC_OPTIMIZE_FOR_PERFORMANCE is not set
+CONFIG_KERNEL_CC_OPTIMIZE_FOR_SIZE=y
 CONFIG_PACKAGE_hostapd-basic=m
 CONFIG_PACKAGE_hostapd-mini=m
 CONFIG_PACKAGE_kmod-batman-adv=m
