--- a/configs/ath79-tiny.config
+++ b/configs/ath79-tiny.config
@@ -1,4 +1,6 @@
 CONFIG_TARGET_ath79=y
 CONFIG_TARGET_ath79_tiny=y
 CONFIG_TARGET_SQUASHFS_BLOCK_SIZE=512
+CONFIG_PACKAGE_hostapd-basic=m
+CONFIG_PACKAGE_hostapd-mini=m
 CONFIG_PACKAGE_wpad-mini=m
