--- a/configs/common.config
+++ b/configs/common.config
@@ -99,6 +99,7 @@ CONFIG_PACKAGE_muninlite=m
 CONFIG_PACKAGE_om-watchdog=m
 CONFIG_PACKAGE_opkg=m
 CONFIG_PACKAGE_openvpn-mbedtls=m
+CONFIG_PACKAGE_openvpn-openssl=m
 CONFIG_PACKAGE_patch=m
 CONFIG_PACKAGE_ppp=m
 CONFIG_PACKAGE_ppp-mod-pppoe=m
