--- a/.github/workflows/build-firmware.yml
+++ b/.github/workflows/build-firmware.yml
@@ -2,9 +2,7 @@ name: Build Firmware
 
 on:
   push:
-    branches: [ Build-System-Core ]
-  pull_request:
-    branches: [ Build-System-Core ]
+    branches: [ my_routers ]
 
 jobs:
   build:
@@ -14,10 +12,9 @@ jobs:
     strategy:
       matrix:
         target: 
-          - ath79-generic
-          - ath79-tiny
-          - ramips-mt7620
-          - mvebu-cortexa9
+          - ar71xx-generic
+          - ar71xx-tiny
+          - x86-generic
       fail-fast: false
 
     env:
