--- a/configs/common.config
+++ b/configs/common.config
@@ -32,6 +32,7 @@ CONFIG_PACKAGE_ipip=m
 CONFIG_PACKAGE_iptables-mod-conntrack-extra=m
 CONFIG_PACKAGE_iptables-mod-filter=m
 CONFIG_PACKAGE_iptables-mod-ipopt=m
+CONFIG_PACKAGE_iptables-mod-nat-extra=m
 CONFIG_PACKAGE_iwinfo=m
 CONFIG_PACKAGE_kmod-crypto-crc32c=m
 CONFIG_PACKAGE_kmod-crypto-hash=m
