--- a/configs/common.config
+++ b/configs/common.config
@@ -95,6 +95,7 @@ CONFIG_PACKAGE_luci-proto-ipv6=m
 CONFIG_PACKAGE_luci-proto-ppp=m
 CONFIG_PACKAGE_luci-theme-bootstrap=y
 CONFIG_PACKAGE_luci-theme-material=m
+CONFIG_PACKAGE_micrond=m
 CONFIG_PACKAGE_mtr=m
 CONFIG_PACKAGE_muninlite=m
 CONFIG_PACKAGE_opkg=m
@@ -106,6 +107,7 @@ CONFIG_PACKAGE_ppp-mod-pppoe=m
 CONFIG_PACKAGE_px5g-mbedtls=m
 CONFIG_PACKAGE_qos-scripts=m
 CONFIG_PACKAGE_rssileds=m
+CONFIG_PACKAGE_screen=m
 CONFIG_PACKAGE_shorewall-lite=m
 CONFIG_PACKAGE_shorewall6-lite=m
 CONFIG_PACKAGE_simple-tc=m
