--- a/configs/ath79-tiny.config
+++ b/configs/ath79-tiny.config
@@ -1,4 +1,5 @@
 CONFIG_TARGET_ath79=y
 CONFIG_TARGET_ath79_tiny=y
 CONFIG_TARGET_SQUASHFS_BLOCK_SIZE=512
+# CONFIG_TARGET_ROOTFS_INITRAMFS is not set
 CONFIG_PACKAGE_wpad-mini=m
