GHA/build: use openwrt/bin/ explicitly as folder when searching files for upload
* fixes "find" to look for files inside these folders
* fixes "prepare upload of imagebuilder and sdk", if they are symlinks

--- a/.github/workflows/build-firmware.yml
+++ b/.github/workflows/build-firmware.yml
@@ -130,8 +130,8 @@ jobs:
     - name: prepare upload of imagebuilder and sdk
       run: |
        mkdir -p tmp_build-tools
-       find openwrt/bin -name *imagebuilder*.tar.xz -exec mv '{}' tmp_build-tools/ \;
-       find openwrt/bin -name *sdk*.tar.xz -exec mv '{}' tmp_build-tools/ \;
+       find openwrt/bin/ -name *imagebuilder*.tar.xz -exec mv '{}' tmp_build-tools/ \;
+       find openwrt/bin/ -name *sdk*.tar.xz -exec mv '{}' tmp_build-tools/ \;
     - name: Archive imagebuilder and sdk
       if: ${{ !cancelled() }}
       continue-on-error: true
