--- a/.github/workflows/build-firmware.yml
+++ b/.github/workflows/build-firmware.yml
@@ -36,6 +36,20 @@ jobs:
         mkdir logs
         echo "MAKE_OPTS= -j$(nproc) TARGET=${{matrix.target}} IS_BUILDBOT=${IS_BUILDBOT} " >>$GITHUB_ENV
         echo "next_buildstep=config" >>$GITHUB_ENV
+    - name: change storage paths
+      run: |
+        echo "GITHUB_WORKSPACE is ${GITHUB_WORKSPACE}"
+        echo "setting download and bin folder to /mnt (as there are 9GB space and WORKSPACE is too small for ath79-generic)"
+        sudo mkdir -m 777 /mnt/build
+        mkdir "/mnt/build/bin"
+        mkdir "/mnt/build/downloads"
+        echo >>configs/common-autobuild.config 'CONFIG_BINARY_FOLDER="/mnt/build/bin"'
+        echo >>configs/common-autobuild.config 'CONFIG_DOWNLOAD_FOLDER="/mnt/build/downloads"'
+        cat configs/common-autobuild.config
+        # symlink the original folders to the new localtions, to satisfy "common" scripts
+        mkdir openwrt
+        ln -s /mnt/build/downloads openwrt/dl
+        ln -s /mnt/build/bin openwrt/bin
     - name: OpenWrt ${{ env.next_buildstep }}
       run: |
         echo "running: make -f Makefile.autobuild ${MAKE_OPTS} ${next_buildstep}"
