configs: enable some comfort features of busybox on x86-generic
These boards usually have enough RAM and disk for comfortable living

--- a/configs/x86-generic.config
+++ b/configs/x86-generic.config
@@ -1,6 +1,22 @@
 CONFIG_TARGET_x86=y
 CONFIG_TARGET_x86_generic=y
 CONFIG_KERNEL_RELAY=y
+CONFIG_BUSYBOX_CONFIG_FEATURE_LESS_BRACKETS=y
+CONFIG_BUSYBOX_CONFIG_FEATURE_LESS_FLAGS=y
+CONFIG_BUSYBOX_CONFIG_FEATURE_LESS_TRUNCATE=y
+CONFIG_BUSYBOX_CONFIG_FEATURE_LESS_MARKS=y
+CONFIG_BUSYBOX_CONFIG_FEATURE_LESS_REGEXP=y
+CONFIG_BUSYBOX_CONFIG_FEATURE_LESS_WINCH=y
+CONFIG_BUSYBOX_CONFIG_FEATURE_LESS_ASK_TERMINAL=y
+CONFIG_BUSYBOX_CONFIG_FEATURE_LESS_DASHCMD=y
+CONFIG_BUSYBOX_CONFIG_FEATURE_LESS_LINENUMS=y
+CONFIG_BUSYBOX_CONFIG_FEATURE_LESS_RAW=y
+CONFIG_BUSYBOX_CONFIG_FEATURE_LESS_ENV=y
+CONFIG_BUSYBOX_CONFIG_FEATURE_TOP_INTERACTIVE=y
+CONFIG_BUSYBOX_CONFIG_FEATURE_TOP_SMP_CPU=y
+CONFIG_BUSYBOX_CONFIG_FEATURE_TOP_DECIMALS=y
+CONFIG_BUSYBOX_CONFIG_FEATURE_TOP_SMP_PROCESS=y
+CONFIG_BUSYBOX_CONFIG_FEATURE_TOPMEM=y
 CONFIG_PACKAGE_MAC80211_DEBUGFS=y
 CONFIG_PACKAGE_MAC80211_MESH=y
 CONFIG_PACKAGE_irqbalance=m
