--- a/configs/common.config
+++ b/configs/common.config
@@ -19,6 +19,8 @@ CONFIG_BUSYBOX_CONFIG_TELNET=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_TELNET_TTYPE=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_TRACEROUTE_USE_ICMP=y
 CONFIG_LIBCURL_OPENSSL=y
+CONFIG_OPENVPN_openssl_ENABLE_LZO=y
+CONFIG_OPENVPN_openssl_ENABLE_IPROUTE2=y
 CONFIG_PACKAGE_ATH_DFS=y
 CONFIG_PACKAGE_apcupsd=m
 CONFIG_PACKAGE_block-mount=m
