configs: don't build initrd-images by default
* keep it enabled for ramip-mt7621, ath79-mikrotik and mvebu-cortexa9, as
  some boards can only initially booted via initrd over tftp
* saves some time and space during build also
* see fc68242419cc8f493f6e5c161af56dfd1ca0d739

cherry-picked from freifunk-berlin@47ac3eb9b8ac0482066dfc91f14645933aae7848

--- a/configs/mvebu-cortexa9.config
+++ b/configs/mvebu-cortexa9.config
@@ -1,5 +1,6 @@
 CONFIG_TARGET_mvebu=y
 CONFIG_TARGET_mvebu_cortexa9=y
+CONFIG_TARGET_ROOTFS_INITRAMFS=y
 CONFIG_PACKAGE_e2fsprogs=m
 CONFIG_PACKAGE_mkf2fs=m
 CONFIG_PACKAGE_partx-utils=m
