--- a/configs/ramips-mt7621.config
+++ b/configs/ramips-mt7621.config
@@ -1,5 +1,6 @@
 CONFIG_TARGET_ramips=y
 CONFIG_TARGET_ramips_mt7621=y
+CONFIG_TARGET_ROOTFS_INITRAMFS=y
 CONFIG_PACKAGE_irqbalance=m
 CONFIG_PACKAGE_nano=m
 CONFIG_PACKAGE_mc=m
