--- a/configs/common.config
+++ b/configs/common.config
@@ -118,6 +118,8 @@ CONFIG_PACKAGE_luci-app-bmx6=m
 CONFIG_PACKAGE_luci-app-bmx7=m
 CONFIG_PACKAGE_luci-app-ffwizard-berlin=m
 CONFIG_PACKAGE_luci-app-firewall=m
+CONFIG_PACKAGE_luci-app-ledtrig-rssi=m
+CONFIG_PACKAGE_luci-app-ledtrig-switch=m
 CONFIG_PACKAGE_luci-app-opkg=m
 CONFIG_PACKAGE_luci-app-olsr=m
 CONFIG_PACKAGE_luci-app-olsr-services=m
