--- a/configs/common.config
+++ b/configs/common.config
@@ -27,6 +27,7 @@ CONFIG_PACKAGE_6in4=m
 CONFIG_PACKAGE_ALFRED_BATHOSTS=y
 CONFIG_PACKAGE_ALFRED_VIS=y
 CONFIG_PACKAGE_ATH_DFS=y
+CONFIG_PACKAGE_ath10k-firmware-qca9888=m
 CONFIG_PACKAGE_alfred=m
 CONFIG_PACKAGE_babeld=m
 CONFIG_PACKAGE_batctl-default=m
