--- a/configs/common.config
+++ b/configs/common.config
@@ -200,7 +200,9 @@ CONFIG_VERSION_MANUFACTURER=""
 CONFIG_VERSION_NUMBER="Development"
 CONFIG_VERSION_CODE=""
 CONFIG_VERSION_PRODUCT=""
-CONFIG_LUCI_SRCDIET=y
+# CONFIG_LUCI_SRCDIET is not set
+# CONFIG_LUCI_JSMIN is not set
+# CONFIG_LUCI_CSSTIDY is not set
 CONFIG_LUCI_LANG_de=m
 CONFIG_LUCI_LANG_en=m
 # CONFIG_KERNEL_SWAP is not set
