configs: build missing modules used by device-specific packages for RB750Gr3
As we do not build all kernel-modules by default, we have to enabled them manually.

--- a/configs/ramips-mt7621.config
+++ b/configs/ramips-mt7621.config
@@ -3,6 +3,8 @@ CONFIG_TARGET_ramips_mt7621=y
 CONFIG_TARGET_ROOTFS_INITRAMFS=y
 # CONFIG_PACKAGE_kmod-ath9k-htc is not set
 CONFIG_PACKAGE_block-mount=m
+CONFIG_PACKAGE_kmod-fs-f2fs=m
+CONFIG_PACKAGE_kmod-sdhci-mt7620=m
 CONFIG_PACKAGE_nano=m
 CONFIG_PACKAGE_mc=m
 CONFIG_PACKAGE_screen=m
