configs: enable SSH-askpass helper for dropbear

--- a/configs/common.config
+++ b/configs/common.config
@@ -21,6 +21,7 @@ CONFIG_BUSYBOX_CONFIG_FEATURE_TRACEROUTE_USE_ICMP=y
 CONFIG_LIBCURL_OPENSSL=y
 CONFIG_OPENVPN_openssl_ENABLE_LZO=y
 CONFIG_OPENVPN_openssl_ENABLE_IPROUTE2=y
+CONFIG_DROPBEAR_ASKPASS=y
 CONFIG_PACKAGE_ATH_DFS=y
 CONFIG_PACKAGE_apcupsd=m
 CONFIG_PACKAGE_block-mount=m
