--- a/configs/ath79-tiny.config
+++ b/configs/ath79-tiny.config
@@ -44,6 +44,8 @@ CONFIG_BUSYBOX_CONFIG_MKWAP=y
 CONFIG_BUSYBOX_CONFIG_SWAPOFF=y
 CONFIG_BUSYBOX_CONFIG_SWAPON=y
 # CONFIG_DROPBEAR_ASKPASS is not set
+# CONFIG_DROPBEAR_CHACHA20POLY1305 is not set
+# CONFIG_DROPBEAR_CURVE25519 is not set
 CONFIG_PROCD_ZRAM_TMPFS=y
 CONFIG_KERNEL_SWAP=y
 # CONFIG_KERNEL_CC_OPTIMIZE_FOR_PERFORMANCE is not set
