configs: busybox: improve handling of terminal-window size changes
* BUSYBOX_CONFIG_FEATURE_EDITING_WINCH
* BUSYBOX_CONFIG_FEATURE_TELNET_WIDTH

hopyfully solves layout-issues

--- a/configs/common.config
+++ b/configs/common.config
@@ -16,7 +16,9 @@ CONFIG_BUSYBOX_CUSTOM=y
 # CONFIG_BUSYBOX_CONFIG_SWAPOFF is not set
 # CONFIG_BUSYBOX_CONFIG_SWAPON is not set
 CONFIG_BUSYBOX_CONFIG_TELNET=y
+CONFIG_BUSYBOX_CONFIG_FEATURE_EDITING_WINCH=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_TELNET_TTYPE=y
+CONFIG_BUSYBOX_CONFIG_FEATURE_TELNET_WIDTH=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_TRACEROUTE_USE_ICMP=y
 # CONFIG_BUSYBOX_CONFIG_INCLUDE_SUSv2 is not set
 CONFIG_LIBCURL_OPENSSL=y
