--- a/configs/common.config
+++ b/configs/common.config
@@ -12,6 +12,7 @@ CONFIG_BUILD_LOG=y
 # CONFIG_KERNEL_DEBUG_KERNEL is not set
 # CONFIG_KERNEL_KALLSYMS is not set
 CONFIG_BUSYBOX_CUSTOM=y
+# CONFIG_BUSYBOX_CONFIG_LESS is not set
 # CONFIG_BUSYBOX_CONFIG_MKSWAP is not set
 # CONFIG_BUSYBOX_CONFIG_SWAPOFF is not set
 # CONFIG_BUSYBOX_CONFIG_SWAPON is not set
@@ -70,6 +71,7 @@ CONFIG_PACKAGE_kmod-usb-serial-pl2303=m
 CONFIG_PACKAGE_kmod-usb-storage=m
 CONFIG_PACKAGE_kmod-usb-uhci=m
 CONFIG_PACKAGE_kmod-veth=m
+CONFIG_PACKAGE_less=m
 CONFIG_PACKAGE_libevent2=m
 CONFIG_PACKAGE_libiwinfo=m
 CONFIG_PACKAGE_libiwinfo-lua=m
