configs: busybox: disable support for mounting SMB/CIFS
Who needs this????

--- a/configs/common.config
+++ b/configs/common.config
@@ -18,6 +18,7 @@ CONFIG_BUSYBOX_CUSTOM=y
 # CONFIG_BUSYBOX_CONFIG_SWAPON is not set
 CONFIG_BUSYBOX_CONFIG_TELNET=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_EDITING_WINCH=y
+# CONFIG_BUSYBOX_CONFIG_FEATURE_MOUNT_CIFS is not set
 CONFIG_BUSYBOX_CONFIG_FEATURE_TELNET_TTYPE=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_TELNET_WIDTH=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_TRACEROUTE_USE_ICMP=y
