--- a/configs/common.config
+++ b/configs/common.config
@@ -29,6 +29,7 @@ CONFIG_OPENVPN_openssl_ENABLE_IPROUTE2=y
 CONFIG_DROPBEAR_ASKPASS=y
 CONFIG_PACKAGE_ATH_DFS=y
 CONFIG_PACKAGE_apcupsd=m
+CONFIG_PACKAGE_babeld=m
 CONFIG_PACKAGE_block-mount=m
 CONFIG_PACKAGE_ca-certificates=m
 CONFIG_PACKAGE_curl=m
@@ -88,6 +89,7 @@ CONFIG_PACKAGE_libubus-lua=m
 CONFIG_PACKAGE_libuci-lua=m
 CONFIG_PACKAGE_libustream-openssl=m
 CONFIG_PACKAGE_lua=m
+CONFIG_PACKAGE_luci-app-babeld=m
 CONFIG_PACKAGE_luci-app-firewall=m
 CONFIG_PACKAGE_luci-app-opkg=m
 CONFIG_PACKAGE_luci-app-openvpn=m
@@ -108,6 +110,7 @@ CONFIG_PACKAGE_luci-theme-material=m
 CONFIG_PACKAGE_micrond=m
 CONFIG_PACKAGE_mtr=m
 CONFIG_PACKAGE_muninlite=m
+CONFIG_PACKAGE_n2n-edge=m
 CONFIG_PACKAGE_opkg=m
 CONFIG_PACKAGE_openvpn-openssl=m
 CONFIG_PACKAGE_patch=m
