configs: disable ssh agentforwarding in dropbear
Not allowing agent-forwarding on shared nodes, improves the security of
the keys (reuse of the agents AUTH_SOCK).

--- a/configs/common.config
+++ b/configs/common.config
@@ -21,6 +21,8 @@ CONFIG_BUSYBOX_CUSTOM=y
 CONFIG_BUSYBOX_CONFIG_TELNET=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_TELNET_TTYPE=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_TRACEROUTE_USE_ICMP=y
+# CONFIG_DROPBEAR_DBCLIENT_AGENTFORWARD is not set
+# CONFIG_DROPBEAR_AGENTFORWARD is not set
 CONFIG_PACKAGE_6in4=m
 CONFIG_PACKAGE_ALFRED_BATHOSTS=y
 CONFIG_PACKAGE_ALFRED_VIS=y
