--- a/configs/ath79-tiny.config
+++ b/configs/ath79-tiny.config
@@ -4,6 +4,7 @@ CONFIG_TARGET_SQUASHFS_BLOCK_SIZE=512
 CONFIG_PACKAGE_hostapd-basic=m
 CONFIG_PACKAGE_hostapd-mini=m
 CONFIG_PACKAGE_wpad-mini=m
+# CONFIG_ALL_KMODS is not set
 # CONFIG_PACKAGE_kmod-fs-cifs is not set
 # CONFIG_PACKAGE_kmod-fs-ext4 is not set
 # CONFIG_PACKAGE_kmod-fs-vfat is not set
