--- a/configs/ath79-tiny.config
+++ b/configs/ath79-tiny.config
@@ -7,6 +7,7 @@ CONFIG_TARGET_SQUASHFS_BLOCK_SIZE=512
 # CONFIG_USB_SUPPORT is not set
 # CONFIG_KERNEL_CC_OPTIMIZE_FOR_PERFORMANCE is not set
 CONFIG_KERNEL_CC_OPTIMIZE_FOR_SIZE=y
+# CONFIG_KERNEL_DEBUG_FS is not set
 CONFIG_PACKAGE_hostapd-basic=m
 CONFIG_PACKAGE_hostapd-mini=m
 CONFIG_PACKAGE_kmod-batman-adv=m
@@ -20,3 +21,4 @@ CONFIG_PACKAGE_wpad-mini=m
 # CONFIG_PACKAGE_usb-modeswitch is not set
 # CONFIG_PACKAGE_usbutils is not set
 # CONFIG_BUSYBOX_CONFIG_FEATURE_MOUNT_CIFS is not set
+# CONFIG_PACKAGE_MAC80211_DEBUGFS is not set
