--- a/configs/ath79-tiny.config
+++ b/configs/ath79-tiny.config
@@ -33,6 +33,8 @@ CONFIG_PACKAGE_wpad-mini=m
 # CONFIG_PACKAGE_comgt is not set
 # CONFIG_AUDIO_SUPPORT is not set
 # CONFIG_USB_SUPPORT is not set
+# CONFIG_KERNEL_DEBUG_FS is not set
+# CONFIG_PACKAGE_MAC80211_DEBUGFS is not set
 # CONFIG_PACKAGE_luci-proto-ppp is not set
 CONFIG_PACKAGE_zram-swap=m
 CONFIG_BUSYBOX_CONFIG_MKWAP=y
