configs: fix disabling kmod-ppp for ath79-tiny
As PPP (mod-pppoe) )depends on "TARGET_PER_DEVICE_ROOT" we disable this option.
For tiny boards it's unlikely that we will face the problem with conflicting
files for hardware-drivers (see 4d7a765).

--- a/configs/ath79-tiny.config
+++ b/configs/ath79-tiny.config
@@ -1,6 +1,7 @@
 CONFIG_TARGET_ath79=y
 CONFIG_TARGET_ath79_tiny=y
 CONFIG_TARGET_SQUASHFS_BLOCK_SIZE=512
+# CONFIG_TARGET_PER_DEVICE_ROOTFS is not set
 # CONFIG_ALL_KMODS is not set
 # CONFIG_AUDIO_SUPPORT is not set
 # CONFIG_USB_SUPPORT is not set
