--- a/configs/ath79-tiny.config
+++ b/configs/ath79-tiny.config
@@ -2,6 +2,7 @@ CONFIG_TARGET_ath79=y
 CONFIG_TARGET_ath79_tiny=y
 CONFIG_TARGET_SQUASHFS_BLOCK_SIZE=512
 # CONFIG_TARGET_PER_DEVICE_ROOTFS is not set
+CONFIG_USE_MKLIBS=y
 CONFIG_PACKAGE_hostapd-basic=m
 CONFIG_PACKAGE_hostapd-mini=m
 CONFIG_PACKAGE_wpad-mini=m
