ah79-tiny: disable mount CIFS-helper for busybox
as we do not provide kernel-fsdriver for CIFS, we don't need this in busybox.

--- a/configs/ath79-tiny.config
+++ b/configs/ath79-tiny.config
@@ -18,3 +18,4 @@ CONFIG_PACKAGE_wpad-mini=m
 # CONFIG_PACKAGE_ppp-mod-pppoe is not set
 # CONFIG_PACKAGE_usb-modeswitch is not set
 # CONFIG_PACKAGE_usbutils is not set
+# CONFIG_BUSYBOX_CONFIG_FEATURE_MOUNT_CIFS is not set
