--- a/configs/ath79-tiny.config
+++ b/configs/ath79-tiny.config
@@ -14,6 +14,7 @@ CONFIG_PACKAGE_kmod-batman-adv=m
 # CONFIG_PACKAGE_kmod-fs-cifs is not set
 # CONFIG_PACKAGE_kmod-fs-ext4 is not set
 # CONFIG_PACKAGE_kmod-fs-vfat is not set
+CONFIG_PACKAGE_kmod-ipt-offload=m
 # CONFIG_PACKAGE_kmod-nls-utf8 is not set
 # CONFIG_PACKAGE_kmod-nls-iso8859-1 is not set
 # CONFIG_PACKAGE_kmod-nls-iso8859-15 is not set
