--- a/configs/ath79-tiny.config
+++ b/configs/ath79-tiny.config
@@ -14,7 +14,15 @@ CONFIG_PACKAGE_kmod-batman-adv=m
 # CONFIG_PACKAGE_kmod-fs-cifs is not set
 # CONFIG_PACKAGE_kmod-fs-ext4 is not set
 # CONFIG_PACKAGE_kmod-fs-vfat is not set
+CONFIG_PACKAGE_kmod-ip6tables=m
+CONFIG_PACKAGE_kmod-ipt-core=m
 CONFIG_PACKAGE_kmod-ipt-offload=m
+CONFIG_PACKAGE_kmod-nf-conntrack=m
+CONFIG_PACKAGE_kmod-nf-flow=m
+CONFIG_PACKAGE_kmod-nf-ipt=m
+CONFIG_PACKAGE_kmod-nf-ipt6=m
+CONFIG_PACKAGE_kmod-nf-reject=m
+CONFIG_PACKAGE_kmod-nf-reject6=m
 # CONFIG_PACKAGE_kmod-nls-utf8 is not set
 # CONFIG_PACKAGE_kmod-nls-iso8859-1 is not set
 # CONFIG_PACKAGE_kmod-nls-iso8859-15 is not set
@@ -42,8 +50,13 @@ CONFIG_PACKAGE_kmod-ipt-offload=m
 # CONFIG_USB_SUPPORT is not set
 # CONFIG_KERNEL_DEBUG_FS is not set
 # CONFIG_PACKAGE_MAC80211_DEBUGFS is not set
+# CONFIG_PACKAGE_luci-proto-3g is not set
+# CONFIG_PACKAGE_comgt is nor set
+# CONFIG_PACKAGE_chat is not set
 # CONFIG_PACKAGE_ppp is not set
 # CONFIG_PACKAGE_luci-proto-ppp is not set
+CONFIG_PACKAGE_ip6tables=m
+CONFIG_PACKAGE_iptables=m
 CONFIG_PACKAGE_zram-swap=y
 CONFIG_BUSYBOX_CONFIG_MKWAP=y
 CONFIG_BUSYBOX_CONFIG_SWAPOFF=y
