configs: disable deprecated SUSv2 features in busybox
this was use in the code once, ut lost on the way upstreaming it

--- a/configs/common.config
+++ b/configs/common.config
@@ -16,6 +16,7 @@ CONFIG_BATMAN_ADV_BLA=y
 CONFIG_BATMAN_ADV_DAT=y
 CONFIG_BATMAN_ADV_MCAST=y
 CONFIG_BUSYBOX_CUSTOM=y
+# CONFIG_BUSYBOX_CONFIG_INCLUDE_SUSv2 is not set
 # CONFIG_BUSYBOX_CONFIG_MKSWAP is not set
 # CONFIG_BUSYBOX_CONFIG_SWAPOFF is not set
 # CONFIG_BUSYBOX_CONFIG_SWAPON is not set
