--- a/.github/workflows/build-firmware.yml
+++ b/.github/workflows/build-firmware.yml
@@ -2,7 +2,7 @@ name: Build Firmware
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, build/* ]
   pull_request:
     branches: [ master ]
 
