--- a/configs/ath79-tiny.config
+++ b/configs/ath79-tiny.config
@@ -7,6 +7,7 @@ CONFIG_TARGET_SQUASHFS_BLOCK_SIZE=512
 CONFIG_PACKAGE_hostapd-basic=m
 CONFIG_PACKAGE_hostapd-mini=m
 CONFIG_PACKAGE_kmod-batman-adv=m
+CONFIG_PACKAGE_kmod-ath9k-htc=m
 CONFIG_PACKAGE_wpad-mini=m
 # CONFIG_PACKAGE_comgt is not set
 # CONFIG_PACKAGE_huaweiaktbbo is not set
