--- a/configs/ath79-tiny.config
+++ b/configs/ath79-tiny.config
@@ -28,3 +28,5 @@ CONFIG_BUSYBOX_CONFIG_SWAPOFF=y
 CONFIG_BUSYBOX_CONFIG_SWAPON=y
 CONFIG_PROCD_ZRAM_TMPFS=y
 CONFIG_KERNEL_SWAP=y
+CONFIG_PACKAGE_kmod-fs-ext4=y
+CONFIG_PACKAGE_e2fsprogs=y
