--- a/configs/ath79-generic.config
+++ b/configs/ath79-generic.config
@@ -8,4 +8,5 @@ CONFIG_PACKAGE_ath10k-firmware-qca9887-ct=m
 CONFIG_PACKAGE_ath10k-firmware-qca9888-ct=m
 CONFIG_PACKAGE_kmod-ath9k-htc=m
 CONFIG_PACKAGE_kmod-ath10k=m
+CONFIG_PACKAGE_kmod_ath10k-smallbuffers=m
 CONFIG_PACKAGE_kmod-ath10k-ct=m
