--- a/configs/ipq40xx-generic.config
+++ b/configs/ipq40xx-generic.config
@@ -3,3 +3,4 @@ CONFIG_TARGET_ipq40xx_generic=y
 CONFIG_PACKAGE_ath10k-firmware-qca9884=m
 CONFIG_PACKAGE_ath10k-firmware-qca9884-ct=m
 CONFIG_PACKAGE_kmod-ath10k-ct=m
+CONFIG_PACKAGE_kmod_ath10k-smallbuffers=m
