--- a/.github/workflows/build-firmware.yml
+++ b/.github/workflows/build-firmware.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ master, next, nightly/* ]
   pull_request:
-    branches: [ master ]
+    branches: [ master, next, nightly/* ]
 
 jobs:
   build:
